fix z-index

--- a/src/components/intro/hero.css
+++ b/src/components/intro/hero.css
@@ -6,7 +6,6 @@
 .hero {
   display: flex;
   position: relative;
-  z-index: -1;
 }
 .title {
   font-weight: 400;
@@ -28,6 +27,7 @@
 .right {
   height: 320px;
   overflow: hidden;
+  z-index: -1;
 }
 .right .bg-icon {
   position: relative;
@@ -100,7 +100,7 @@ figcaption {
   opacity: 0.7;
   font-size: 1.2rem;
   line-height: 1;
-  color: currentColor;
+  color: var(--clr-dark-blue);
 }
 .inner-detail h2:hover {
   color: var(--clr-bright-cyan);
